# CodexUsageDashboard

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml
docs/superpowers/specs/: 2026-06-24-v0.2-github-beta-release-design.md
scripts/: check-version.mjs
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: codex_scanner.rs  commands.rs  db.rs  lib.rs  main.rs  models.rs  rate_limit_parser.rs  token_parser.rs  watcher.rs
src/components/: DashboardWidget.test.tsx  DashboardWidget.tsx  DiagnosticsPanel.tsx  Heatmap.tsx  LimitBar.tsx  UpdatePrompt.tsx
src/lib/: api.ts  diagnostics.test.ts  diagnostics.ts  fallbackState.ts  format.test.ts  format.ts  heatmap.test.ts  heatmap.ts
