[package]
name = "codex-usage-widget"
version = "0.2.0"
description = "Windows floating widget for Codex local usage limits and token activity"
authors = ["Codex Usage Widget"]
edition = "2021"

[lib]
name = "codex_usage_widget_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
log = "0.4"
notify = "7"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-log = "2.8.0"
tauri-plugin-opener = "2.5.4"
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-updater = "2.10.1"
tauri-plugin-window-state = "2"
thiserror = "1"
tokio = { version = "1", features = ["time"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"
